--- a/Tarea 1. Análisis de la descripción de productos audiovisuales en la plataforma de Netflix (Pt2).ipynb
+++ b/Tarea 1. Análisis de la descripción de productos audiovisuales en la plataforma de Netflix (Pt2).ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d4e59f6b",
+   "metadata": {},
+   "source": [
+    "# Análisis de la descripción de productos audiovisuales en la plataforma de Netflix (Pt. 2)\n",
+    "\n",
+    "\n",
+    "**Nombre:** Leobardo García Reyes\n",
+    "\n",
+    "**Matrícula:** 1616825"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf262d04",
+   "metadata": {},
+   "source": [
+    "## Carga de librerías"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 64,
    "id": "bd1f4291",
@@ -68,6 +89,14 @@
     "nltk.download('punkt') # Descargar tokenizar\n",
     "nltk.download('stopwords') # Descargar stopwords\n",
     "nltk.download('wordnet') # Descargar lematización\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f74f4e80",
+   "metadata": {},
+   "source": [
+    "## Carga de archivo"
    ]
   },
   {
@@ -200,6 +229,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ec9d6ea",
+   "metadata": {},
+   "source": [
+    "## Contabilizar los tipos de géneros"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "id": "067b7fec",
@@ -265,6 +302,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "282abd25",
+   "metadata": {},
+   "source": [
+    "## Gráficas los tipos de géneros "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "id": "13debd4b",
@@ -294,6 +339,14 @@
     "plt.xlabel('Número de productos audiovisuales', fontweight = 'bold')\n",
     "plt.ylabel('Géneros', fontweight = 'bold')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d8069cd",
+   "metadata": {},
+   "source": [
+    "## Realizar one hot encoding"
    ]
   },
   {
@@ -1051,6 +1104,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b7a38dc",
+   "metadata": {},
+   "source": [
+    "## Seleccionar la columna de descripción y género"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "id": "12a123e6",
@@ -1062,6 +1123,14 @@
     "filtro_netflix = nuevo_netflix[(nuevo_netflix['Comedies'] == 1)]\n",
     "filtro_netflix.to_csv('D:/Documentos/Maestría en Ciencia de Datos/Matria PyCD/Base de datos/filtro.csv',\n",
     "                      header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9328df8a",
+   "metadata": {},
+   "source": [
+    "## Seleccionar la columna de descripción"
    ]
   },
   {
@@ -1098,6 +1167,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "be178180",
+   "metadata": {},
+   "source": [
+    "## Primera parte de limpieza de texto\n",
+    "## Convertir texto en minúsculas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 95,
    "id": "3da2f44d",
@@ -1120,6 +1198,14 @@
     "# Texto en minúsculas\n",
     "minuscula = [cadena.lower() for cadena in filtro_netflix['description']]\n",
     "minuscula[:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e160abca",
+   "metadata": {},
+   "source": [
+    "## Eliminar números en el texto"
    ]
   },
   {
@@ -1148,6 +1234,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9d04824a",
+   "metadata": {},
+   "source": [
+    "## Eliminar texto dentro de los paréntesis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 97,
    "id": "ec9dc4e0",
@@ -1170,6 +1264,14 @@
     "# Eliminar texto dentro del parentesís\n",
     "parentesis = [re.sub(\"([\\(\\[]).*?([\\)\\]])\", \"\\g<1>\\g<2>\", cadena) for cadena in numeros]\n",
     "parentesis[:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46dab1b9",
+   "metadata": {},
+   "source": [
+    "## Eliminar signos"
    ]
   },
   {
@@ -1198,6 +1300,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e884daea",
+   "metadata": {},
+   "source": [
+    "## Eliminar espacios en blanco"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 99,
    "id": "95091c8e",
@@ -1220,6 +1330,15 @@
     "# Eliminar espacios en blanco\n",
     "espacios_blancos = [cadena.strip() for cadena in signos]\n",
     "espacios_blancos[:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51a00189",
+   "metadata": {},
+   "source": [
+    "## Segunda parte de la limpieza de texto\n",
+    "## Tokenización de las palabras"
    ]
   },
   {
@@ -1269,6 +1388,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9ab32310",
+   "metadata": {},
+   "source": [
+    "## Juntar todas las palabras en una lista"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 102,
    "id": "70a4dde4",
@@ -1292,6 +1419,14 @@
     "    for i in cadena:\n",
     "        descripcion.append(i)\n",
     "descripcion[:9]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f702e213",
+   "metadata": {},
+   "source": [
+    "## Seleccionar o añadir stopwords"
    ]
   },
   {
@@ -1322,6 +1457,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54b4922b",
+   "metadata": {},
+   "source": [
+    "## Eliminar stopwords de la lista que se creo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 104,
    "id": "a31f4aad",
@@ -1349,6 +1492,14 @@
     "# Eliminar stopwords\n",
     "sin_sw = [cadena for cadena in descripcion if not cadena in sw]\n",
     "sin_sw[:8]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d95f5da",
+   "metadata": {},
+   "source": [
+    "## Seleccionar método de stem y transformar las palabras a su raíz"
    ]
   },
   {
@@ -1408,6 +1559,14 @@
     "    palabra_raiz2.append(metodo_lematizador.lemmatize(cadena, pos = 'v'))\n",
     "    \n",
     "palabra_raiz2[:8]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86beeb04",
+   "metadata": {},
+   "source": [
+    "## Gráfica de la frecuencia de palabras"
    ]
   },
   {
@@ -1481,6 +1640,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "634801d6",
+   "metadata": {},
+   "source": [
+    "## Nube de palabras"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 92,
    "id": "31053e43",
@@ -1528,18 +1695,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e9bf930",
+   "id": "5b390b79",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b390b79",
+   "cell_type": "markdown",
+   "id": "4d2b59e6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Pruebas personales"
+   ]
   },
   {
    "cell_type": "code",
